# MktLeadGen

./: INSTRUCTIONS.md  README.md  dashboard.py  install.ps1  outreach_config.json  pyproject.toml  requirements.txt  run_scraper.bat  scheduler.py  setup_git.ps1
src/marketing_leads_generator/: __init__.py  crew.py  main.py
src/marketing_leads_generator/config/: agents.yaml  tasks.yaml
src/marketing_leads_generator/tools/: amazon_tool.py  discord_monitor_tool.py  github_tool.py  hacker_news_tool.py  lead_utils.py  reddit_tool.py
